--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
@@ -12064,8 +12064,8 @@ body {
 
 /* ===== Carrusel Swiper General ===== */
 .swiper {
-  width: 100vw;
-  max-width: 100vw;
+  width: 100%;
+  max-width: 100%;
   margin: 0 auto;
   padding: 30px 0;
   overflow: visible;
