intentando con cm

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
@@ -12079,7 +12079,7 @@ body {
   justify-content: center;
   align-items: stretch;
   transition: all 0.4s ease;
-  transform: scale(2.2); /* Reducido de 0.8 para que los laterales estén más cerca */
+  transform: scale(0.2cm); /* Reducido de 0.8 para que los laterales estén más cerca */
   opacity: 0.7; /* Aumentado de 0.6 para mejor visibilidad */
   height: auto;
 }
