--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
@@ -12116,6 +12116,7 @@ body {
 .project-image {
   width: 100%;
   height: 200px; /* Altura fija para todas las imágenes */
+  padding: 5px;
   overflow: hidden;
   flex-shrink: 0;
 }
