--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
@@ -12093,7 +12093,8 @@ body {
   transform: scale(1);
   opacity: 1;
   z-index: 10;
-  
+  overflow: hidden;
+  margin-bottom: 10px;  
 }
 
 /* Ajuste para tarjetas de altura uniforme */
