--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
@@ -11808,7 +11808,7 @@ html {
    Nota: Estos estilos no afectan a las imágenes del carrusel */
 .project-image-wrapper .project-image {
   max-width: 100%;
-  height: auto;
+  height: 250;
   border-radius: 1rem;
   object-fit: cover;
 }
