left align resume cards

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
@@ -11839,7 +11839,7 @@ html {
     font-weight: 500;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.03);
     transition: all 0.3s ease;
-    text-align: center;
+    text-align: left;
 }
 
 .skill-card:hover {
